Bug 71784 - Sections getting added to the document after round trip
Summary: Sections getting added to the document after round trip
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha1
Hardware: Other All
: medium normal
Assignee: Tushar Bende
URL:
Whiteboard: target:4.3.0 target:4.2.3
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-19 13:18 UTC by Tushar Bende
Modified: 2014-03-10 20:45 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
File for which Sections getting added after RT (32.14 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-11-19 13:18 UTC, Tushar Bende
Details
Round Triped file (27.11 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-11-19 13:20 UTC, Tushar Bende
Details
Round Triped file after code changes on 26Nov (17.55 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-11-26 13:09 UTC, Tushar Bende
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tushar Bende 2013-11-19 13:18:21 UTC
Created attachment 89461 [details]
File for which Sections getting added after RT

Steps to reproduce:
1. Open the file in LibreOffice
2. Click File -> Save As (Microsoft Word 2007/2010 (.docx))
3. Open in MS Office 2010 and compare with original document
Expected:
1. File should be identical
Actual:
1. The saved file has many more pages
2. In document.xml of original file, there is just one <sectPr> whereas in round trip document, there are 20+ <sectPr> because of which it becomes several pages long and several header/footer xmls get added in roundtrip document.
Comment 1 Tushar Bende 2013-11-19 13:20:47 UTC
Created attachment 89462 [details]
Round Triped file
Comment 2 Tushar Bende 2013-11-26 12:59:59 UTC
The root cause found was faulty calculation of PageDesc value & This was the reason for increasing number of pages in RT doc.

code changes done and gerrit review link is https://gerrit.libreoffice.org/6813

Note:This Document contains multiple issue after this code changes , Still the RT 10 page document(Initially used to come as 109 pages) attaching the RT document after code changes.

Lokking into this other issue.
Comment 3 Tushar Bende 2013-11-26 13:09:05 UTC
Created attachment 89834 [details]
Round Triped file after code changes on 26Nov
Comment 4 Tushar Bende 2013-11-27 14:42:05 UTC
One more issue was there with this file and also found for many files that not preserving table row property "allow row to break across pages" during export which was causing problem that all the row data was getting displayed on same page and hence after RT. Gerrit Review link is https://gerrit.libreoffice.org/#/c/6834/
Comment 5 Tushar Bende 2013-11-27 14:47:57 UTC
Still this doc has one issue remaining .I am currently working on it.
Comment 6 Commit Notification 2013-12-06 09:39:06 UTC
Tushar Bende committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5efc2a34a54327961bb393fcf07a562b90f462bd

fdo#71784:Preserve prop "allow row to break across pages" during export



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2013-12-06 11:26:31 UTC
Tushar Bende committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9a37ce189881f12d678fdb054219b13c3e4c7e40

fdo#71784: Invalid Sections getting added to the document after RT



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-03-10 20:45:24 UTC
Tushar Bende committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1b2cf579105d8a1e44b5e2a8aafb79c274fc8455&h=libreoffice-4-2

fdo#71784: Invalid Sections getting added to the document after RT


It will be available in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.