fdo#71784: Invalid Sections getting added to the document after RT

Description: There was a problem for some documents, during export Invalid sectPr were getting added.
The root cause was faulty calculation of PageDesc value.
This was the reason for increasing number of pages in RT doc.

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx

Reviewed-on: https://gerrit.libreoffice.org/6813
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>

This fixes crash on export to DOCX too for the bugdoc on rhbz#1074205

(cherry picked from commit 9a37ce189881f12d678fdb054219b13c3e4c7e40)
Signed-off-by: Miklos Vajna <vmiklos@collabora.co.uk>

Change-Id: I0700c735545614730d26be187d9047fd20ebf134